--- a/book-example/book/cli/cli-tool.html
+++ b/book-example/book/cli/cli-tool.html
@@ -24,12 +24,29 @@
                 <h1 class="menu-title"></h1>
             </div>
 
-            <div id="page" class="page">
-                <h1>Command Line Tool</h1>
+            <div class="page">
+                <div id="content" class="content">
+                    <h1>Command Line Tool</h1>
 <p>mdBook can be used either as a command line tool or a Rust library.
 Let's focus on the command line tool capabilities first.</p>
 
+                </div>
             </div>
+
+            <!--
+                Doesn't seem to work:  using JavaScript
+                alternative until I find a way to do it in the template
+            -->
+                <a href="../README.html" class="nav-chapters previous">
+                    <i class="fa fa-angle-left"></i>
+                </a>
+            <!--  -->
+
+            <!--  -->
+                <a href="../cli/init.html" class="nav-chapters next">
+                    <i class="fa fa-angle-right"></i>
+                </a>
+            <!--  -->
 
         </div>
 
