--- a/book-example/book/cli/init.html
+++ b/book-example/book/cli/init.html
@@ -24,8 +24,9 @@
                 <h1 class="menu-title"></h1>
             </div>
 
-            <div id="page" class="page">
-                <h1>The init command</h1>
+            <div class="page">
+                <div id="content" class="content">
+                    <h1>The init command</h1>
 <p>The init command, used like this:</p>
 <pre><code>mdbook init
 </code></pre>
@@ -58,7 +59,23 @@ The user could then tweak the theme to his needs.</li>
 not create the corresponding files, init command should create the files for him.</li>
 </ul>
 
+                </div>
             </div>
+
+            <!--
+                Doesn't seem to work:  using JavaScript
+                alternative until I find a way to do it in the template
+            -->
+                <a href="../cli/cli-tool.html" class="nav-chapters previous">
+                    <i class="fa fa-angle-left"></i>
+                </a>
+            <!--  -->
+
+            <!--  -->
+                <a href="../cli/build.html" class="nav-chapters next">
+                    <i class="fa fa-angle-right"></i>
+                </a>
+            <!--  -->
 
         </div>
 
