--- a/book-example/book/cli/build.html
+++ b/book-example/book/cli/build.html
@@ -24,8 +24,9 @@
                 <h1 class="menu-title"></h1>
             </div>
 
-            <div id="page" class="page">
-                <h1>The build command</h1>
+            <div class="page">
+                <div id="content" class="content">
+                    <h1>The build command</h1>
 <p>The build command is used to render your book:</p>
 <pre><code>mdbook build
 </code></pre>
@@ -41,7 +42,23 @@ current working directory.</p>
 <hr />
 <p><strong>note:</strong> make sure to run the build command in the root directory and not in the <code>src</code> directory</p>
 
+                </div>
             </div>
+
+            <!--
+                Doesn't seem to work:  using JavaScript
+                alternative until I find a way to do it in the template
+            -->
+                <a href="../cli/init.html" class="nav-chapters previous">
+                    <i class="fa fa-angle-left"></i>
+                </a>
+            <!--  -->
+
+            <!--  -->
+                <a href="" class="nav-chapters next">
+                    <i class="fa fa-angle-right"></i>
+                </a>
+            <!--  -->
 
         </div>
 
