Make print page (print.html) links link to anchors on the print page
Let all the anchors id on the print page to have a path id prefix to
help locate.

e.g. bar/foo.md#abc -> #bar-foo-abc

Also append a dummy div to the start of the original page to make sure
that original page links without an anchor can also be located.

Fix to remove all the `./` in the normalized path id so that for
"./foo/bar.html#abc" we still get "#foo-bar-abc"

Add support for redirect link anchors in print page so that anchors can
also be redirected, also handle URL redirect links on print page

Handle all the elements id to add a path prefix, also make path id to
all be the lower case

Fix for print page footnote links by adding the path id prefix

Signed-off-by: Hollow Man <hollowman@opensuse.org>

--- a/tests/testsuite/print/duplicate_ids/expected/print.html
+++ b/tests/testsuite/print/duplicate_ids/expected/print.html
@@ -1,11 +1,11 @@
-<h1 id="chapter-1"><a class="header" href="#chapter-1">Chapter 1</a></h1>
-<h2 id="some-title"><a class="header" href="#some-title">Some title</a></h2>
-<p>See <a href="chapter_2.html#some-title">other</a></p>
-<p>See <a href="chapter_1.html#some-title">this</a></p>
-<p>See <a href="chapter_1.html#some-title">this anchor only</a></p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="chapter-2"><a class="header" href="#chapter-2">Chapter 2</a></h1>
-<h2 id="some-title-1"><a class="header" href="#some-title-1">Some title</a></h2>
-<p>See <a href="chapter_1.html#some-title">other</a></p>
-<p>See <a href="chapter_2.html#some-title">this</a></p>
-<p>See <a href="chapter_2.html#some-title">this anchor only</a></p>
-<p><a href="chapter_1.html#some-title">Works with HTML extension too</a></p>
+<div id="chapter_1"></div><h1 id="chapter_1-chapter-1"><a class="header" href="#chapter_1-chapter-1">Chapter 1</a></h1>
+<h2 id="chapter_1-some-title"><a class="header" href="#chapter_1-some-title">Some title</a></h2>
+<p>See <a href="#chapter_2-some-title">other</a></p>
+<p>See <a href="#chapter_1-some-title">this</a></p>
+<p>See <a href="#chapter_1-some-title">this anchor only</a></p>
+<div style="break-before: page; page-break-before: always;"></div><div id="chapter_2"></div><h1 id="chapter_2-chapter-2"><a class="header" href="#chapter_2-chapter-2">Chapter 2</a></h1>
+<h2 id="chapter_2-some-title"><a class="header" href="#chapter_2-some-title">Some title</a></h2>
+<p>See <a href="#chapter_1-some-title">other</a></p>
+<p>See <a href="#chapter_2-some-title">this</a></p>
+<p>See <a href="#chapter_2-some-title">this anchor only</a></p>
+<p><a href="#chapter_1-some-title">Works with HTML extension too</a></p>
