Add a new HTML rendering pipeline
This rewrites the HTML rendering pipeline to use a tree data structure,
and implements a custom HTML serializer. The intent is to make it easier
to make changes and to manipulate the output. This should make some
future changes much easier.

This is a large change, but I'll try to briefly summarize what's
changing:

- All of the HTML rendering support has been moved out of
  mdbook-markdown into mdbook-html. For now, all of the API surface is
  private, though we may consider ways to safely expose it in the
  future.
- Instead of using pulldown-cmark's html serializer, this takes the
  pulldown-cmark events and translates them into a tree data structure
  (using the ego-tree crate to define the tree). See `tree.rs`.
- HTML in the markdown document is parsed using html5ever, and then
  lives inside the same tree data structure. See `tokenizer.rs`.
- Transformations are then applied to the tree data structure. For
  example, adding header links or hiding code lines.
- Serialization is a simple process of writing out the nodes to a
  string. See `serialize.rs`.
- The search indexer works on the tree structure instead of re-rendering
  every chapter twice. See `html_handlebars/search.rs`.
- The print page now takes a very different approach of taking the
  same tree structure built for rendering the chapters, and applies
  transformations to it. This avoid re-parsing everything again. See
  `print.rs`.
    - I changed the linking behavior so that links on the print page
      link to items on the print page instead of outside the print page.
- There are a variety of small changes to how it serializes as can be
  seen in the changes to the tests. Some highlights:
	- Code blocks no longer have a second layer of `<pre>` tags wrapping
      it.
    - Fixed a minor issue where a rust code block with a specific
      edition was having the wrong classes when there was a default
      edition.
- Drops the ammonia dependency, which significantl

--- a/tests/testsuite/markdown/basic_markdown/expected/html.html
+++ b/tests/testsuite/markdown/basic_markdown/expected/html.html
@@ -20,18 +20,14 @@ comment
     <col span="2" class="a">
   </colgroup>
 </table>
-<p><embed
-  type="image/jpeg"
-  src="/image.jpg"
-  width="100"
-  height="200"></p>
+
+<p><embed type="image/jpeg" src="/image.jpg" width="100" height="200"></p>
 <p>Rule:</p>
 <hr>
 <img src="example.jpg">
 <input type="text">
 <link href="example.css" rel="stylesheet">
-<p><meta name="example"
-  content="Example content"></p>
+<p><meta name="example" content="Example content"></p>
 <video>
   <source src="video.webm" type="video/webm">
   <track kind="captions" src="captions.vtt" srclang="en">
@@ -40,12 +36,14 @@ comment
 <div>
 A block HTML element trying to do *markup*.
 </div>
+
 <div>
 <p>A block HTML with spaces that <strong>cause</strong> it to be interleaved with markdown.</p>
 </div>
+
 <h2 id="scripts"><a class="header" href="#scripts">Scripts</a></h2>
 <script></script>
-<script async src="foo.js"></script>
+<script async="" src="foo.js"></script>
 <script>
 const x = 'some *text* inside';
 
@@ -62,6 +60,6 @@ const x = 'some *text* inside';
 */
 
 </style>
-<style media="(width < 500px)">
+<style media="(width &lt; 500px)">
 .bar { background-color: green }
 </style>
