--- a/tests/testsuite/rendering/editable_rust_block/expected/editable-rust.html
+++ b/tests/testsuite/rendering/editable_rust_block/expected/editable-rust.html
@@ -1,8 +1,8 @@
 <h1 id="chapter-1"><a class="header" href="#chapter-1">Chapter 1</a></h1>
-<pre><pre class="playground"><code class="language-rust editable">fn f() {
+<pre class="playground"><code class="language-rust editable">fn f() {
     println!("hello");
-}</code></pre></pre>
-<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+}</code></pre>
+<pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>// Not editable.
-<span class="boring">}</span></code></pre></pre>
+<span class="boring">}</span></code></pre>
