--- a/tests/testsuite/rendering/hidelines/expected/hide-lines.html
+++ b/tests/testsuite/rendering/hidelines/expected/hide-lines.html
@@ -11,7 +11,7 @@
 </span><span class="boring">    hidden()
 </span>    nothidden()
 </code></pre>
-<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+<pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span>#![allow(something)]
 <span class="boring">fn main() {
 </span><span class="boring">
@@ -20,4 +20,4 @@
 </span># not_hidden();
 #[not_hidden]
 not_hidden();
-<span class="boring">}</span></code></pre></pre>
+<span class="boring">}</span></code></pre>
