--- a/tests/testsuite/markdown/basic_markdown/expected/blockquotes.html
+++ b/tests/testsuite/markdown/basic_markdown/expected/blockquotes.html
@@ -1,7 +1,6 @@
 <h1 id="blockquotes"><a class="header" href="#blockquotes">Blockquotes</a></h1>
 <p>Empty:</p>
-<blockquote>
-</blockquote>
+<blockquote></blockquote>
 <p>Normal:</p>
 <blockquote>
 <p>foo
@@ -9,10 +8,10 @@ bar</p>
 </blockquote>
 <p>Contains code block:</p>
 <blockquote>
-<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+<pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>let x = 1;
-<span class="boring">}</span></code></pre></pre>
+<span class="boring">}</span></code></pre>
 </blockquote>
 <p>Random stuff:</p>
 <blockquote>
