--- a/tests/testsuite/markdown/basic_markdown/expected/html.html
+++ b/tests/testsuite/markdown/basic_markdown/expected/html.html
@@ -64,6 +64,6 @@ const x = 'some *text* inside';
 .bar { background-color: green }
 </style>
 <h2 id="manual-headers"><a class="header" href="#manual-headers">Manual headers</a></h2>
-<h2 id="my header"><a class="header" href="#my header"><a href="#foo">My Header</a></a></h2>
+<h2 id="my header"><a href="#foo">My Header</a></h2>
 
-<h3 id="another-header"><a class="header" href="#another-header">Another header</a></h3>
+<h3>Another header</h3>
